tests/baselines/reference/moduleResolutionWithoutExtension3.errors.txt
/src/bar.mts(2,21): error TS2835: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './foo.jsx'?


==== /src/foo.tsx (0 errors) ====
    export function foo() {
        return "";
    }
    
==== /src/bar.mts (1 errors) ====
    // Extensionless relative path ES import in an ES module
    import { foo } from "./foo"; // should error, suggest adding ".jsx"
                        ~~~~~~~
!!! error TS2835: Relative import paths need explicit file extensions in ECMAScript imports when '--moduleResolution' is 'node16' or 'nodenext'. Did you mean './foo.jsx'?
    